--- a/main/templates/main/admin/feedbacklist.html
+++ b/main/templates/main/admin/feedbacklist.html
@@ -45,6 +45,9 @@ List of Food
                                     <img width="50" src="{{ feedback.order.product.image.url }}" alt="vehicle">
                                 </a>
                             </td>
+                            <td>
+                                {{ feedback.order.product.name }}
+                            </td>
                             <td>{{ feedback.order.user.first_name | title}} {{ feedback.order.user.last_name | title}}
                             </td>
                             <td>{{ feedback.message}}</td>
@@ -52,30 +55,35 @@ List of Food
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="rating">
                                         {% if feedback.rating == 1 %}
+                                        <span>{{ feedback.rating }}/5</span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                         <span class="fa fa-star"></span>
                                         <span class="fa fa-star"></span>
                                         <span class="fa fa-star"></span>
                                         {% elif feedback.rating == 2 %}
+                                        <span>{{ feedback.rating }}/5</span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                         <span class="fa fa-star"></span>
                                         <span class="fa fa-star"></span>
                                         {% elif feedback.rating == 3 %}
+                                        <span>{{ feedback.rating }}/5</span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                         <span class="fa fa-star"></span>
                                         {% elif feedback.rating == 4 %}
+                                        <span>{{ feedback.rating }}/5</span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star"></span>
                                         {% elif feedback.rating == 5 %}
+                                        <span>{{ feedback.rating }}/5</span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
                                         <span class="fa fa-star checked"></span>
